Update language file: hr

--- a/static/languages/hr.json
+++ b/static/languages/hr.json
@@ -1,13 +1,39 @@
 {
-  "title": "Koje zemlje EU-a nude najbolje izglede za zapošljavanje?",
-  "subtitle": "Budući rast zaposlenosti u tim zemljama u razdoblju 2022. – 2035. procjenjuje se na 5,6%.",
+  "title": "Koliko su česti zločini povezani s drogama u EU?",
+  "subtitle": "U 2023. godini oko 1,18 milijuna građana EU-a bilo je uključeno u ilegalne aktivnosti povezane s drogama koje uključuju prekursore.",
   "textNoteDescription": "Bilješka",
-  "textNote": "sdchdc",
+  "textNote": "Ukupan broj policijskih kaznenih djela nezakonitih djela koja uključuju kontrolirane droge ili prekursore. Izvješća o kaznenim djelima protiv nacionalnog zakonodavstva o drogama (upotreba, posjedovanje, trgovina itd.) odražavaju razlike u zakonima, ali i različite načine na koje se zakon provodi i primjenjuje te prioritete i resurse koje agencije kaznenog pravosuđa dodjeljuju specifičnim problemima.",
   "textSourceDescription": "Izvor",
-  "textSource": "sdcshdc",
-  "linkDataAccessDescription": "Pristupite podacima",
-  "extraInfo_DE": "Njemačka ubrzava uvođenje obnovljive energije, cilj je 80% čiste energije do 2030.",
-  "extraInfo_FR": "Francuski parlament odobrio veliki nacrt zakona o useljeničkoj reformi usred prosvjeda diljem zemlje",
+  "textSource": "Eurostat (2023.)",
+  "linkDataAccessDescription": "Pristup podacima",
+  "extraInfo_AT": "Ukupan broj: 35737",
+  "extraInfo_BE": "Ukupan broj: 58915",
+  "extraInfo_BG": "Ukupan broj: 5691",
+  "extraInfo_CY": "Ukupan broj: 1094",
+  "extraInfo_CZ": "Ukupan broj: 4328",
+  "extraInfo_DE": "Ukupan broj: 346877",
+  "extraInfo_DK": "Ukupan broj: 29934",
+  "extraInfo_EE": "Ukupan broj: 3297",
+  "extraInfo_EL": "Ukupan broj: 12713",
+  "extraInfo_ES": "Ukupan broj: 21033",
+  "extraInfo_FI": "Ukupan broj: 26784",
+  "extraInfo_FR": "Ukupan broj: 346628",
+  "extraInfo_HR": "Ukupan broj: 10356",
+  "extraInfo_HU": "Ukupan broj: 6589",
+  "extraInfo_IE": "Ukupan broj: 16699",
+  "extraInfo_IT": "Ukupan broj: 30365",
+  "extraInfo_LT": "Ukupan broj: 3811",
+  "extraInfo_LU": "Ukupan broj: 3129",
+  "extraInfo_LV": "Ukupan broj: 1350",
+  "extraInfo_MT": "Ukupan broj: 200",
+  "extraInfo_NL": "Ukupan broj: 13580",
+  "extraInfo_PL": "Ukupan broj: 67346",
+  "extraInfo_PT": "Ukupan broj: 7661",
+  "extraInfo_RO": "Ukupan broj: 12775",
+  "extraInfo_SE": "Ukupan broj: 115164",
+  "extraInfo_SI": "Ukupan broj: 1294",
+  "extraInfo_SK": "Ukupan broj: 1361",
   "legend1": "Nema dostupnih podataka",
+  "customUnitLabel": "na sto tisuća stanovnika",
   "tooltipExtraInfoLabel": "Kliknite ovdje"
 }
