Update language file: da

--- a/static/languages/da.json
+++ b/static/languages/da.json
@@ -1,13 +1,39 @@
 {
-  "title": "Hvilke EU-lande har de bedste beskæftigelsesmuligheder?",
-  "subtitle": "Fremtidig vækst i beskæftigelsen i disse lande i 2022-2035 anslås til 5,6 %.",
+  "title": "Hvor almindelige er narkotikarelateret kriminalitet i EU?",
+  "subtitle": "I 2023 var omkring 1,18 millioner EU-borgere involveret i ulovlige narkotikarelaterede aktiviteter, der involverede prækursorer.",
   "textNoteDescription": "Note",
-  "textNote": "sdchdc",
+  "textNote": "Samlet antal politiregistrerede lovovertrædelser vedrørende ulovlige handlinger, der involverer kontrollerede stoffer eller prækursorer. Rapporter om lovovertrædelser mod national narkotikalovgivning (brug, besiddelse, handel osv.) afspejler forskelle i lovgivningen, men også de forskellige måder, hvorpå loven håndhæves og anvendes, og de prioriteter og ressourcer, der afsættes til specifikke problemer af strafferetlige myndigheder.",
   "textSourceDescription": "Kilde",
-  "textSource": "sdcshdc",
-  "linkDataAccessDescription": "Få adgang til data",
-  "extraInfo_DE": "Tyskland fremskynder udrulningen af vedvarende energi, sigter mod 80 % ren strøm inden 2030",
-  "extraInfo_FR": "Det franske parlament godkender lovforslaget om større immigrationsreformer under landsdækkende protester",
-  "legend1": "Ingen tilgængelige data",
+  "textSource": "Eurostat (2023)",
+  "linkDataAccessDescription": "Få adgang til dataene",
+  "extraInfo_AT": "Samlet antal: 35737",
+  "extraInfo_BE": "Samlet antal: 58915",
+  "extraInfo_BG": "Samlet antal: 5691",
+  "extraInfo_CY": "Samlet antal: 1094",
+  "extraInfo_CZ": "Samlet antal: 4328",
+  "extraInfo_DE": "Samlet antal: 346877",
+  "extraInfo_DK": "Samlet antal: 29934",
+  "extraInfo_EE": "Samlet antal: 3297",
+  "extraInfo_EL": "Samlet antal: 12713",
+  "extraInfo_ES": "Samlet antal: 21033",
+  "extraInfo_FI": "Samlet antal: 26784",
+  "extraInfo_FR": "Samlet antal: 346628",
+  "extraInfo_HR": "Samlet antal: 10356",
+  "extraInfo_HU": "Samlet antal: 6589",
+  "extraInfo_IE": "Samlet antal: 16699",
+  "extraInfo_IT": "Samlet antal: 30365",
+  "extraInfo_LT": "Samlet antal: 3811",
+  "extraInfo_LU": "Samlet antal: 3129",
+  "extraInfo_LV": "Samlet antal: 1350",
+  "extraInfo_MT": "Samlet antal: 200",
+  "extraInfo_NL": "Samlet antal: 13580",
+  "extraInfo_PL": "Samlet antal: 67346",
+  "extraInfo_PT": "Samlet antal: 7661",
+  "extraInfo_RO": "Samlet antal: 12775",
+  "extraInfo_SE": "Samlet antal: 115164",
+  "extraInfo_SI": "Samlet antal: 1294",
+  "extraInfo_SK": "Samlet antal: 1361",
+  "legend1": "Ingen data tilgængelige",
+  "customUnitLabel": "per hundrede tusinde indbyggere",
   "tooltipExtraInfoLabel": "Klik her"
 }
