--- a/static/languages/bg.json
+++ b/static/languages/bg.json
@@ -1,13 +1,39 @@
 {
-  "title": "Кои страни от ЕС предлагат най-добри перспективи за заетост?",
-  "subtitle": "Бъдещият растеж на заетостта в тези страни през 2022-2035 г. се оценява на 5,6%.",
+  "title": "Колко често се случват престъпленията, свързани с наркотици, в ЕС?",
+  "subtitle": "През 2023 г. около 1,18 милиона граждани на ЕС са били замесени в незаконни дейности, свързани с наркотици, включващи прекурсори.",
   "textNoteDescription": "Забележка",
-  "textNote": "sdchdc",
+  "textNote": "Общ брой регистрирани от полицията престъпления, свързани с незаконни действия, включващи контролирани наркотици или прекурсори. Докладите за престъпления срещу националното законодателство в областта на наркотиците (употреба, притежание, трафик и др.) отразяват различията в законодателството, но също така и различните начини, по които законът се прилага и прилага, както и приоритетите и ресурсите, разпределени за специфични проблеми от органите на наказателното правосъдие.",
   "textSourceDescription": "Източник",
-  "textSource": "sdcshdc",
+  "textSource": "Евростат (2023 г.)",
   "linkDataAccessDescription": "Достъп до данните",
-  "extraInfo_DE": "Германия ускорява внедряването на възобновяема енергия, цели 80% чиста енергия до 2030 г.",
-  "extraInfo_FR": "Френският парламент одобри законопроект за основна реформа на имиграцията на фона на протести в цялата страна",
+  "extraInfo_AT": "Общ брой: 35737",
+  "extraInfo_BE": "Общ брой: 58915",
+  "extraInfo_BG": "Общ брой: 5691",
+  "extraInfo_CY": "Общ брой: 1094",
+  "extraInfo_CZ": "Общ брой: 4328",
+  "extraInfo_DE": "Общ брой: 346877",
+  "extraInfo_DK": "Общ брой: 29934",
+  "extraInfo_EE": "Общ брой: 3297",
+  "extraInfo_EL": "Общ брой: 12713",
+  "extraInfo_ES": "Общ брой: 21033",
+  "extraInfo_FI": "Общ брой: 26784",
+  "extraInfo_FR": "Общ брой: 346628",
+  "extraInfo_HR": "Общ брой: 10356",
+  "extraInfo_HU": "Общ брой: 6589",
+  "extraInfo_IE": "Общ брой: 16699",
+  "extraInfo_IT": "Общ брой: 30365",
+  "extraInfo_LT": "Общ брой: 3811",
+  "extraInfo_LU": "Общ брой: 3129",
+  "extraInfo_LV": "Общ брой: 1350",
+  "extraInfo_MT": "Общ брой: 200",
+  "extraInfo_NL": "Общ брой: 13580",
+  "extraInfo_PL": "Общ брой: 67346",
+  "extraInfo_PT": "Общ брой: 7661",
+  "extraInfo_RO": "Общ брой: 12775",
+  "extraInfo_SE": "Общ брой: 115164",
+  "extraInfo_SI": "Общ брой: 1294",
+  "extraInfo_SK": "Общ брой: 1361",
   "legend1": "Няма налични данни",
+  "customUnitLabel": "на сто хиляди жители",
   "tooltipExtraInfoLabel": "Кликнете тук"
 }
