Update language file: en

--- a/static/languages/en.json
+++ b/static/languages/en.json
@@ -1,13 +1,39 @@
 {
-  "title": "Which EU countries offer the best employment prospects?",
-  "subtitle": "Future employment growth in these countries in 2022-2035 is estimated at 5.6%.",
+  "title": "How common are drug-related crimes in the EU?",
+  "subtitle": "In 2023, around 1.18 million EU citizens were involved in illegal drug-related activities involving precursors.",
   "textNoteDescription": "Note",
-  "textNote": "sdchdc",
+  "textNote": "Total number of police-recorded offences of unlawful acts involving controlled drugs or precursors. Reports of offences against national drug legislation (use, possession, trafficking, etc.) reflect differences in law but also the different ways in which the law is enforced and applied, and the priorities and resources allocated to specific problems by criminal justice agencies.",
   "textSourceDescription": "Source",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Access the data",
-  "extraInfo_DE": "Germany Accelerates Renewable Energy Rollout, Targets 80% Clean Power by 2030",
-  "extraInfo_FR": "French Parliament Approves Major Immigration Reform Bill Amid Nationwide Protests",
+  "extraInfo_AT": "Total number: 35737",
+  "extraInfo_BE": "Total number: 58915",
+  "extraInfo_BG": "Total number: 5691",
+  "extraInfo_CY": "Total number: 1094",
+  "extraInfo_CZ": "Total number: 4328",
+  "extraInfo_DE": "Total number: 346877",
+  "extraInfo_DK": "Total number: 29934",
+  "extraInfo_EE": "Total number: 3297",
+  "extraInfo_EL": "Total number: 12713",
+  "extraInfo_ES": "Total number: 21033",
+  "extraInfo_FI": "Total number: 26784",
+  "extraInfo_FR": "Total number: 346628",
+  "extraInfo_HR": "Total number: 10356",
+  "extraInfo_HU": "Total number: 6589",
+  "extraInfo_IE": "Total number: 16699",
+  "extraInfo_IT": "Total number: 30365",
+  "extraInfo_LT": "Total number: 3811",
+  "extraInfo_LU": "Total number: 3129",
+  "extraInfo_LV": "Total number: 1350",
+  "extraInfo_MT": "Total number: 200",
+  "extraInfo_NL": "Total number: 13580",
+  "extraInfo_PL": "Total number: 67346",
+  "extraInfo_PT": "Total number: 7661",
+  "extraInfo_RO": "Total number: 12775",
+  "extraInfo_SE": "Total number: 115164",
+  "extraInfo_SI": "Total number: 1294",
+  "extraInfo_SK": "Total number: 1361",
   "legend1": "No data available",
+  "customUnitLabel": "per hundred thousand inhabitants",
   "tooltipExtraInfoLabel": "Click here"
 }
