Update language file: cs

--- a/static/languages/cs.json
+++ b/static/languages/cs.json
@@ -1,13 +1,39 @@
 {
-  "title": "Které země EU nabízejí nejlepší vyhlídky na zaměstnání?",
-  "subtitle": "Budoucí růst zaměstnanosti v těchto zemích v letech 2022-2035 se odhaduje na 5,6 %.",
+  "title": "Jak časté jsou trestné činy související s drogami v EU?",
+  "subtitle": "V roce 2023 bylo přibližně 1,18 milionu občanů EU zapojeno do nelegálních drogových aktivit zahrnujících prekurzory.",
   "textNoteDescription": "Poznámka",
-  "textNote": "sdchdc",
+  "textNote": "Celkový počet policií zaznamenaných trestných činů protiprávního jednání týkajících se kontrolovaných drog nebo prekurzorů. Zprávy o trestných činech porušujících vnitrostátní protidrogovou legislativu (užívání, držení, obchodování atd.) odrážejí rozdíly v právních předpisech, ale také různé způsoby, jakými jsou zákony vymáhány a uplatňovány, a priority a zdroje přidělené na konkrétní problémy orgány trestního soudnictví.",
   "textSourceDescription": "Zdroj",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Přístup k datům",
-  "extraInfo_DE": "Německo urychluje zavádění obnovitelné energie a do roku 2030 si klade za cíl 80 % čisté energie",
-  "extraInfo_FR": "Francouzský parlament schválil návrh zákona o velké imigrační reformě uprostřed celonárodních protestů",
-  "legend1": "Nejsou k dispozici žádné údaje",
+  "extraInfo_AT": "Celkový počet: 35737",
+  "extraInfo_BE": "Celkový počet: 58915",
+  "extraInfo_BG": "Celkový počet: 5691",
+  "extraInfo_CY": "Celkový počet: 1094",
+  "extraInfo_CZ": "Celkový počet: 4328",
+  "extraInfo_DE": "Celkový počet: 346877",
+  "extraInfo_DK": "Celkový počet: 29934",
+  "extraInfo_EE": "Celkový počet: 3297",
+  "extraInfo_EL": "Celkový počet: 12713",
+  "extraInfo_ES": "Celkový počet: 21033",
+  "extraInfo_FI": "Celkový počet: 26784",
+  "extraInfo_FR": "Celkový počet: 346628",
+  "extraInfo_HR": "Celkový počet: 10356",
+  "extraInfo_HU": "Celkový počet: 6589",
+  "extraInfo_IE": "Celkový počet: 16699",
+  "extraInfo_IT": "Celkový počet: 30365",
+  "extraInfo_LT": "Celkový počet: 3811",
+  "extraInfo_LU": "Celkový počet: 3129",
+  "extraInfo_LV": "Celkový počet: 1350",
+  "extraInfo_MT": "Celkový počet: 200",
+  "extraInfo_NL": "Celkový počet: 13580",
+  "extraInfo_PL": "Celkový počet: 67346",
+  "extraInfo_PT": "Celkový počet: 7661",
+  "extraInfo_RO": "Celkový počet: 12775",
+  "extraInfo_SE": "Celkový počet: 115164",
+  "extraInfo_SI": "Celkový počet: 1294",
+  "extraInfo_SK": "Celkový počet: 1361",
+  "legend1": "Nejsou k dispozici žádná data",
+  "customUnitLabel": "na sto tisíc obyvatel",
   "tooltipExtraInfoLabel": "Klikněte zde"
 }
