Update language file: fi

--- a/static/languages/fi.json
+++ b/static/languages/fi.json
@@ -1,13 +1,39 @@
 {
-  "title": "Mitkä EU-maat tarjoavat parhaat työllisyysnäkymät?",
-  "subtitle": "Näissä maissa tulevaisuudessa työllisyyden kasvun arvioidaan olevan 5,6 % vuosina 2022-2035.",
-  "textNoteDescription": "Huom",
-  "textNote": "sdchdc",
+  "title": "Kuinka yleisiä huumerikokset ovat EU:ssa?",
+  "subtitle": "Vuonna 2023 noin 1,18 miljoonaa EU:n kansalaista oli osallisena laittomaan huumetoimintaan, johon liittyi lähtöaineita.",
+  "textNoteDescription": "Huomautus",
+  "textNote": "Poliisin tietoon tulleiden huumausaineisiin tai niiden lähtöaineisiin liittyvien laittomien tekojen kokonaismäärä. Kansallisen huumausainelainsäädännön vastaisten rikosten (käyttö, hallussapito, kauppa jne.) ilmoitukset heijastavat lainsäädännön eroja, mutta myös erilaisia tapoja, joilla lakia valvotaan ja sovelletaan, sekä rikosoikeusviranomaisten tiettyihin ongelmiin osoittamia prioriteetteja ja resursseja.",
   "textSourceDescription": "Lähde",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Käytä tietoja",
-  "extraInfo_DE": "Saksa nopeuttaa uusiutuvan energian käyttöönottoa ja tavoittelee 80 % puhdasta sähköä vuoteen 2030 mennessä",
-  "extraInfo_FR": "Ranskan parlamentti hyväksyi suuren maahanmuuttouudistuksen valtakunnallisten mielenosoitusten keskellä",
-  "legend1": "Tietoja ei ole saatavilla",
+  "extraInfo_AT": "Kokonaismäärä: 35737",
+  "extraInfo_BE": "Kokonaismäärä: 58915",
+  "extraInfo_BG": "Kokonaismäärä: 5691",
+  "extraInfo_CY": "Kokonaismäärä: 1094",
+  "extraInfo_CZ": "Kokonaismäärä: 4328",
+  "extraInfo_DE": "Kokonaismäärä: 346877",
+  "extraInfo_DK": "Kokonaismäärä: 29934",
+  "extraInfo_EE": "Kokonaismäärä: 3297",
+  "extraInfo_EL": "Kokonaismäärä: 12713",
+  "extraInfo_ES": "Kokonaismäärä: 21033",
+  "extraInfo_FI": "Kokonaismäärä: 26784",
+  "extraInfo_FR": "Kokonaismäärä: 346628",
+  "extraInfo_HR": "Kokonaismäärä: 10356",
+  "extraInfo_HU": "Kokonaismäärä: 6589",
+  "extraInfo_IE": "Kokonaismäärä: 16699",
+  "extraInfo_IT": "Kokonaismäärä: 30365",
+  "extraInfo_LT": "Kokonaismäärä: 3811",
+  "extraInfo_LU": "Kokonaismäärä: 3129",
+  "extraInfo_LV": "Kokonaismäärä: 1350",
+  "extraInfo_MT": "Kokonaismäärä: 200",
+  "extraInfo_NL": "Kokonaismäärä: 13580",
+  "extraInfo_PL": "Kokonaismäärä: 67346",
+  "extraInfo_PT": "Kokonaismäärä: 7661",
+  "extraInfo_RO": "Kokonaismäärä: 12775",
+  "extraInfo_SE": "Kokonaismäärä: 115164",
+  "extraInfo_SI": "Kokonaismäärä: 1294",
+  "extraInfo_SK": "Kokonaismäärä: 1361",
+  "legend1": "Ei tietoja saatavilla",
+  "customUnitLabel": "sataatuhatta asukasta kohden",
   "tooltipExtraInfoLabel": "Klikkaa tästä"
 }
