Update language file: et

--- a/static/languages/et.json
+++ b/static/languages/et.json
@@ -1,13 +1,39 @@
 {
-  "title": "Millised ELi riigid pakuvad parimaid töövõimalusi?",
-  "subtitle": "Nendes riikides on edaspidine tööhõive kasv aastatel 2022–2035 hinnanguliselt 5,6%.",
+  "title": "Kui levinud on narkootikumidega seotud kuriteod ELis?",
+  "subtitle": "2023. aastal oli umbes 1,18 miljonit ELi kodanikku seotud ebaseadusliku narkootikumidega seotud tegevusega, mis hõlmas lähteaineid.",
   "textNoteDescription": "Märkus",
-  "textNote": "sdchdc",
+  "textNote": "Politsei poolt registreeritud kontrollitavate uimastite või lähteainetega seotud ebaseaduslike kuritegude koguarv. Narkootikumidega seotud riiklike õigusaktide (tarbimine, omamine, salakaubavedu jne) vastaste kuritegude aruanded kajastavad seaduste erinevusi, aga ka erinevaid viise, kuidas seadust jõustatakse ja kohaldatakse, ning kriminaalõigusasutuste poolt konkreetsetele probleemidele eraldatud prioriteete ja ressursse.",
   "textSourceDescription": "Allikas",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Juurdepääs andmetele",
-  "extraInfo_DE": "Saksamaa kiirendab taastuvenergia kasutuselevõttu, seab eesmärgiks 80% puhta energia kasutamise aastaks 2030",
-  "extraInfo_FR": "Prantsusmaa parlament kiitis üleriigiliste protestide taustal heaks immigratsioonireformi seaduse eelnõu",
-  "legend1": "Andmed puuduvad",
-  "tooltipExtraInfoLabel": "Klõpsake siin"
+  "extraInfo_AT": "Koguarv: 35737",
+  "extraInfo_BE": "Koguarv: 58915",
+  "extraInfo_BG": "Koguarv: 5691",
+  "extraInfo_CY": "Koguarv: 1094",
+  "extraInfo_CZ": "Koguarv: 4328",
+  "extraInfo_DE": "Koguarv: 346877",
+  "extraInfo_DK": "Koguarv: 29934",
+  "extraInfo_EE": "Koguarv: 3297",
+  "extraInfo_EL": "Koguarv: 12713",
+  "extraInfo_ES": "Koguarv: 21033",
+  "extraInfo_FI": "Koguarv: 26784",
+  "extraInfo_FR": "Koguarv: 346628",
+  "extraInfo_HR": "Koguarv: 10356",
+  "extraInfo_HU": "Koguarv: 6589",
+  "extraInfo_IE": "Koguarv: 16699",
+  "extraInfo_IT": "Koguarv: 30365",
+  "extraInfo_LT": "Koguarv: 3811",
+  "extraInfo_LU": "Koguarv: 3129",
+  "extraInfo_LV": "Koguarv: 1350",
+  "extraInfo_MT": "Koguarv: 200",
+  "extraInfo_NL": "Koguarv: 13580",
+  "extraInfo_PL": "Koguarv: 67346",
+  "extraInfo_PT": "Koguarv: 7661",
+  "extraInfo_RO": "Koguarv: 12775",
+  "extraInfo_SE": "Koguarv: 115164",
+  "extraInfo_SI": "Koguarv: 1294",
+  "extraInfo_SK": "Koguarv: 1361",
+  "legend1": "Andmed pole saadaval",
+  "customUnitLabel": "saja tuhande elaniku kohta",
+  "tooltipExtraInfoLabel": "Kliki siia"
 }
