Update language file: nl

--- a/static/languages/nl.json
+++ b/static/languages/nl.json
@@ -1,13 +1,39 @@
 {
-  "title": "Welke EU-landen bieden de beste werkgelegenheidsvooruitzichten?",
-  "subtitle": "De toekomstige werkgelegenheidsgroei in deze landen in de periode 2022-2035 wordt geschat op 5,6%.",
+  "title": "Hoe vaak komen drugsgerelateerde misdrijven voor in de EU?",
+  "subtitle": "In 2023 waren ongeveer 1,18 miljoen EU-burgers betrokken bij illegale drugsactiviteiten waarbij precursoren betrokken waren.",
   "textNoteDescription": "Opmerking",
-  "textNote": "sdchdc",
+  "textNote": "Totaal aantal door de politie geregistreerde misdrijven met betrekking tot verboden drugs of precursoren. Meldingen van overtredingen van de nationale drugswetgeving (gebruik, bezit, handel, enz.) weerspiegelen verschillen in wetgeving, maar ook de verschillende manieren waarop de wet wordt gehandhaafd en toegepast, en de prioriteiten en middelen die door strafrechtelijke instanties aan specifieke problemen worden toegewezen.",
   "textSourceDescription": "Bron",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Toegang tot de gegevens",
-  "extraInfo_DE": "Duitsland versnelt uitrol van hernieuwbare energie, streeft naar 80% schone energie in 2030",
-  "extraInfo_FR": "Frans parlement keurt groot wetsvoorstel immigratiehervorming goed te midden van landelijke protesten",
+  "extraInfo_AT": "Totaal aantal: 35737",
+  "extraInfo_BE": "Totaal aantal: 58915",
+  "extraInfo_BG": "Totaal aantal: 5691",
+  "extraInfo_CY": "Totaal aantal: 1094",
+  "extraInfo_CZ": "Totaal aantal: 4328",
+  "extraInfo_DE": "Totaal aantal: 346877",
+  "extraInfo_DK": "Totaal aantal: 29934",
+  "extraInfo_EE": "Totaal aantal: 3297",
+  "extraInfo_EL": "Totaal aantal: 12713",
+  "extraInfo_ES": "Totaal aantal: 21033",
+  "extraInfo_FI": "Totaal aantal: 26784",
+  "extraInfo_FR": "Totaal aantal: 346628",
+  "extraInfo_HR": "Totaal aantal: 10356",
+  "extraInfo_HU": "Totaal aantal: 6589",
+  "extraInfo_IE": "Totaal aantal: 16699",
+  "extraInfo_IT": "Totaal aantal: 30365",
+  "extraInfo_LT": "Totaal aantal: 3811",
+  "extraInfo_LU": "Totaal aantal: 3129",
+  "extraInfo_LV": "Totaal aantal: 1350",
+  "extraInfo_MT": "Totaal aantal: 200",
+  "extraInfo_NL": "Totaal aantal: 13580",
+  "extraInfo_PL": "Totaal aantal: 67346",
+  "extraInfo_PT": "Totaal aantal: 7661",
+  "extraInfo_RO": "Totaal aantal: 12775",
+  "extraInfo_SE": "Totaal aantal: 115164",
+  "extraInfo_SI": "Totaal aantal: 1294",
+  "extraInfo_SK": "Totaal aantal: 1361",
   "legend1": "Geen gegevens beschikbaar",
+  "customUnitLabel": "per honderdduizend inwoners",
   "tooltipExtraInfoLabel": "Klik hier"
 }
