Update language file: fr

--- a/static/languages/fr.json
+++ b/static/languages/fr.json
@@ -1,13 +1,39 @@
 {
-  "title": "Quels pays de l’UE offrent les meilleures perspectives d’emploi ?",
-  "subtitle": "La croissance future de l’emploi dans ces pays en 2022-2035 est estimée à 5,6 %.",
+  "title": "Les crimes liés à la drogue sont-ils fréquents dans l'UE ?",
+  "subtitle": "En 2023, environ 1,18 million de citoyens de l'UE étaient impliqués dans des activités illégales liées aux drogues et impliquant des précurseurs.",
   "textNoteDescription": "Note",
-  "textNote": "sdchdc",
+  "textNote": "Nombre total d'infractions enregistrées par la police concernant des actes illégaux liés aux stupéfiants ou à leurs précurseurs. Les rapports d'infractions à la législation nationale sur les stupéfiants (usage, possession, trafic, etc.) reflètent les différences entre les législations, mais aussi les différences dans leur application et les priorités et ressources allouées aux problèmes spécifiques par les organismes de justice pénale.",
   "textSourceDescription": "Source",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Accéder aux données",
-  "extraInfo_DE": "L'Allemagne accélère le déploiement des énergies renouvelables et vise 80 % d'énergie propre d'ici 2030",
-  "extraInfo_FR": "Le Parlement français approuve un important projet de loi sur la réforme de l'immigration au milieu de manifestations à l'échelle nationale",
+  "extraInfo_AT": "Nombre total : 35737",
+  "extraInfo_BE": "Nombre total : 58915",
+  "extraInfo_BG": "Nombre total : 5691",
+  "extraInfo_CY": "Nombre total : 1094",
+  "extraInfo_CZ": "Nombre total : 4328",
+  "extraInfo_DE": "Nombre total : 346877",
+  "extraInfo_DK": "Nombre total : 29934",
+  "extraInfo_EE": "Nombre total : 3297",
+  "extraInfo_EL": "Nombre total : 12713",
+  "extraInfo_ES": "Nombre total : 21033",
+  "extraInfo_FI": "Nombre total : 26784",
+  "extraInfo_FR": "Nombre total : 346628",
+  "extraInfo_HR": "Nombre total : 10356",
+  "extraInfo_HU": "Nombre total : 6589",
+  "extraInfo_IE": "Nombre total : 16699",
+  "extraInfo_IT": "Nombre total : 30365",
+  "extraInfo_LT": "Nombre total : 3811",
+  "extraInfo_LU": "Nombre total : 3129",
+  "extraInfo_LV": "Nombre total : 1350",
+  "extraInfo_MT": "Nombre total : 200",
+  "extraInfo_NL": "Nombre total : 13580",
+  "extraInfo_PL": "Nombre total : 67346",
+  "extraInfo_PT": "Nombre total : 7661",
+  "extraInfo_RO": "Nombre total : 12775",
+  "extraInfo_SE": "Nombre total : 115164",
+  "extraInfo_SI": "Nombre total : 1294",
+  "extraInfo_SK": "Nombre total : 1361",
   "legend1": "Aucune donnée disponible",
+  "customUnitLabel": "pour cent mille habitants",
   "tooltipExtraInfoLabel": "Cliquez ici"
 }
