--- a/static/languages/de.json
+++ b/static/languages/de.json
@@ -1,13 +1,39 @@
 {
-  "title": "Welche EU-Länder bieten die besten Beschäftigungsaussichten?",
-  "subtitle": "Das künftige Beschäftigungswachstum in diesen Ländern im Zeitraum 2022–2035 wird auf 5,6 % geschätzt.",
+  "title": "Wie häufig sind drogenbezogene Straftaten in der EU?",
+  "subtitle": "Im Jahr 2023 waren rund 1,18 Millionen EU-Bürger in illegale Drogenaktivitäten verwickelt, bei denen Vorläuferstoffe eine Rolle spielten.",
   "textNoteDescription": "Notiz",
-  "textNote": "sdchdc",
+  "textNote": "Die Gesamtzahl der polizeilich erfassten Straftaten im Zusammenhang mit Betäubungsmitteln oder deren Vorläuferstoffen. Meldungen über Verstöße gegen die nationale Drogengesetzgebung (Konsum, Besitz, Handel usw.) spiegeln nicht nur Unterschiede in den Gesetzen wider, sondern auch die unterschiedlichen Arten ihrer Durchsetzung und Anwendung sowie die Prioritäten und Ressourcen, die Strafverfolgungsbehörden spezifischen Problemen zuweisen.",
   "textSourceDescription": "Quelle",
-  "textSource": "Abonnieren",
-  "linkDataAccessDescription": "Zugriff auf die Daten",
-  "extraInfo_DE": "Deutschland beschleunigt Ausbau erneuerbarer Energien und strebt bis 2030 80 % sauberen Stromanteil an",
-  "extraInfo_FR": "Französisches Parlament verabschiedet inmitten landesweiter Proteste ein umfassendes Gesetz zur Einwanderungsreform",
+  "textSource": "Eurostat (2023)",
+  "linkDataAccessDescription": "Greifen Sie auf die Daten zu.",
+  "extraInfo_AT": "Gesamtzahl: 35737",
+  "extraInfo_BE": "Gesamtzahl: 58915",
+  "extraInfo_BG": "Gesamtzahl: 5691",
+  "extraInfo_CY": "Gesamtzahl: 1094",
+  "extraInfo_CZ": "Gesamtzahl: 4328",
+  "extraInfo_DE": "Gesamtzahl: 346877",
+  "extraInfo_DK": "Gesamtzahl: 29934",
+  "extraInfo_EE": "Gesamtzahl: 3297",
+  "extraInfo_EL": "Gesamtzahl: 12713",
+  "extraInfo_ES": "Gesamtzahl: 21033",
+  "extraInfo_FI": "Gesamtzahl: 26784",
+  "extraInfo_FR": "Gesamtzahl: 346628",
+  "extraInfo_HR": "Gesamtzahl: 10356",
+  "extraInfo_HU": "Gesamtzahl: 6589",
+  "extraInfo_IE": "Gesamtzahl: 16699",
+  "extraInfo_IT": "Gesamtzahl: 30365",
+  "extraInfo_LT": "Gesamtzahl: 3811",
+  "extraInfo_LU": "Gesamtzahl: 3129",
+  "extraInfo_LV": "Gesamtzahl: 1350",
+  "extraInfo_MT": "Gesamtzahl: 200",
+  "extraInfo_NL": "Gesamtzahl: 13580",
+  "extraInfo_PL": "Gesamtzahl: 67346",
+  "extraInfo_PT": "Gesamtzahl: 7661",
+  "extraInfo_RO": "Gesamtzahl: 12775",
+  "extraInfo_SE": "Gesamtzahl: 115164",
+  "extraInfo_SI": "Gesamtzahl: 1294",
+  "extraInfo_SK": "Gesamtzahl: 1361",
   "legend1": "Keine Daten verfügbar",
+  "customUnitLabel": "pro hunderttausend Einwohner",
   "tooltipExtraInfoLabel": "klicken Sie hier"
 }
