Update language file: el

--- a/static/languages/el.json
+++ b/static/languages/el.json
@@ -1,13 +1,39 @@
 {
-  "title": "Ποιες χώρες της ΕΕ προσφέρουν τις καλύτερες προοπτικές απασχόλησης;",
-  "subtitle": "Η μελλοντική αύξηση της απασχόλησης σε αυτές τις χώρες το 2022-2035 εκτιμάται σε 5,6%.",
+  "title": "Πόσο συχνά είναι τα εγκλήματα που σχετίζονται με ναρκωτικά στην ΕΕ;",
+  "subtitle": "Το 2023, περίπου 1,18 εκατομμύρια πολίτες της ΕΕ συμμετείχαν σε παράνομες δραστηριότητες που σχετίζονται με ναρκωτικά και αφορούν πρόδρομες ουσίες.",
   "textNoteDescription": "Σημείωμα",
-  "textNote": "sdchdc",
+  "textNote": "Συνολικός αριθμός καταγεγραμμένων από την αστυνομία αδικημάτων παράνομων πράξεων που αφορούν ελεγχόμενα ναρκωτικά ή πρόδρομες ουσίες. Οι αναφορές αδικημάτων κατά της εθνικής νομοθεσίας για τα ναρκωτικά (χρήση, κατοχή, εμπορία κ.λπ.) αντικατοπτρίζουν τις διαφορές στη νομοθεσία, αλλά και τους διαφορετικούς τρόπους με τους οποίους επιβάλλεται και εφαρμόζεται ο νόμος, καθώς και τις προτεραιότητες και τους πόρους που διατίθενται σε συγκεκριμένα προβλήματα από τις υπηρεσίες ποινικής δικαιοσύνης.",
   "textSourceDescription": "Πηγή",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Πρόσβαση στα δεδομένα",
-  "extraInfo_DE": "Η Γερμανία επιταχύνει την ανάπτυξη των ανανεώσιμων πηγών ενέργειας, στοχεύει στο 80% καθαρή ενέργεια έως το 2030",
-  "extraInfo_FR": "Το γαλλικό κοινοβούλιο ενέκρινε το νομοσχέδιο για τη σημαντική μεταρρύθμιση της μετανάστευσης εν μέσω πανελλαδικών διαδηλώσεων",
+  "extraInfo_AT": "Συνολικός αριθμός: 35737",
+  "extraInfo_BE": "Συνολικός αριθμός: 58915",
+  "extraInfo_BG": "Συνολικός αριθμός: 5691",
+  "extraInfo_CY": "Συνολικός αριθμός: 1094",
+  "extraInfo_CZ": "Συνολικός αριθμός: 4328",
+  "extraInfo_DE": "Συνολικός αριθμός: 346877",
+  "extraInfo_DK": "Συνολικός αριθμός: 29934",
+  "extraInfo_EE": "Συνολικός αριθμός: 3297",
+  "extraInfo_EL": "Συνολικός αριθμός: 12713",
+  "extraInfo_ES": "Συνολικός αριθμός: 21033",
+  "extraInfo_FI": "Συνολικός αριθμός: 26784",
+  "extraInfo_FR": "Συνολικός αριθμός: 346628",
+  "extraInfo_HR": "Συνολικός αριθμός: 10356",
+  "extraInfo_HU": "Συνολικός αριθμός: 6589",
+  "extraInfo_IE": "Συνολικός αριθμός: 16699",
+  "extraInfo_IT": "Συνολικός αριθμός: 30365",
+  "extraInfo_LT": "Συνολικός αριθμός: 3811",
+  "extraInfo_LU": "Συνολικός αριθμός: 3129",
+  "extraInfo_LV": "Συνολικός αριθμός: 1350",
+  "extraInfo_MT": "Συνολικός αριθμός: 200",
+  "extraInfo_NL": "Συνολικός αριθμός: 13580",
+  "extraInfo_PL": "Συνολικός αριθμός: 67346",
+  "extraInfo_PT": "Συνολικός αριθμός: 7661",
+  "extraInfo_RO": "Συνολικός αριθμός: 12775",
+  "extraInfo_SE": "Συνολικός αριθμός: 115164",
+  "extraInfo_SI": "Συνολικός αριθμός: 1294",
+  "extraInfo_SK": "Συνολικός αριθμός: 1361",
   "legend1": "Δεν υπάρχουν διαθέσιμα δεδομένα",
+  "customUnitLabel": "ανά εκατό χιλιάδες κατοίκους",
   "tooltipExtraInfoLabel": "Κάντε κλικ εδώ"
 }
