Update language file: hu

--- a/static/languages/hu.json
+++ b/static/languages/hu.json
@@ -1,13 +1,39 @@
 {
-  "title": "Mely uniós országok kínálják a legjobb foglalkoztatási kilátásokat?",
-  "subtitle": "A foglalkoztatás jövőbeni növekedése ezekben az országokban 2022 és 2035 között 5,6%-ra becsülhető.",
+  "title": "Milyen gyakoriak a kábítószerrel kapcsolatos bűncselekmények az EU-ban?",
+  "subtitle": "2023-ban körülbelül 1,18 millió uniós polgár vett részt prekurzorokat is magában foglaló illegális kábítószer-tevékenységekben.",
   "textNoteDescription": "Jegyzet",
-  "textNote": "sdchdc",
+  "textNote": "A rendőrség által nyilvántartásba vett, ellenőrzött kábítószerekkel vagy prekurzorokkal kapcsolatos jogellenes cselekmények teljes száma. A nemzeti kábítószer-törvények elleni bűncselekményekről (használat, birtoklás, kereskedelem stb.) szóló jelentések tükrözik a jogszabályok közötti különbségeket, de a törvények végrehajtásának és alkalmazásának eltérő módjait, valamint a büntető igazságszolgáltatási szervek által az egyes problémákra fordított prioritásokat és erőforrásokat is.",
   "textSourceDescription": "Forrás",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Hozzáférés az adatokhoz",
-  "extraInfo_DE": "Németország felgyorsítja a megújuló energia elterjedését, és 2030-ra a 80%-os tiszta energia elérését tűzi ki célul",
-  "extraInfo_FR": "A francia parlament országos tiltakozások közepette jóváhagyta a jelentős bevándorlási reformról szóló törvényjavaslatot",
-  "legend1": "Nincs adat",
+  "extraInfo_AT": "Teljes szám: 35737",
+  "extraInfo_BE": "Teljes szám: 58915",
+  "extraInfo_BG": "Teljes szám: 5691",
+  "extraInfo_CY": "Teljes szám: 1094",
+  "extraInfo_CZ": "Teljes szám: 4328",
+  "extraInfo_DE": "Teljes szám: 346877",
+  "extraInfo_DK": "Teljes szám: 29934",
+  "extraInfo_EE": "Teljes szám: 3297",
+  "extraInfo_EL": "Teljes szám: 12713",
+  "extraInfo_ES": "Teljes szám: 21033",
+  "extraInfo_FI": "Teljes szám: 26784",
+  "extraInfo_FR": "Teljes szám: 346628",
+  "extraInfo_HR": "Teljes szám: 10356",
+  "extraInfo_HU": "Teljes szám: 6589",
+  "extraInfo_IE": "Teljes szám: 16699",
+  "extraInfo_IT": "Teljes szám: 30365",
+  "extraInfo_LT": "Teljes szám: 3811",
+  "extraInfo_LU": "Teljes szám: 3129",
+  "extraInfo_LV": "Teljes szám: 1350",
+  "extraInfo_MT": "Teljes szám: 200",
+  "extraInfo_NL": "Teljes szám: 13580",
+  "extraInfo_PL": "Teljes szám: 67346",
+  "extraInfo_PT": "Teljes szám: 7661",
+  "extraInfo_RO": "Teljes szám: 12775",
+  "extraInfo_SE": "Teljes szám: 115164",
+  "extraInfo_SI": "Teljes szám: 1294",
+  "extraInfo_SK": "Teljes szám: 1361",
+  "legend1": "Nincsenek elérhető adatok",
+  "customUnitLabel": "százezer lakosonként",
   "tooltipExtraInfoLabel": "Kattintson ide"
 }
