Update language file: lv

--- a/static/languages/lv.json
+++ b/static/languages/lv.json
@@ -1,13 +1,39 @@
 {
-  "title": "Kuras ES valstis piedāvā vislabākās nodarbinātības izredzes?",
-  "subtitle": "Nākotnes nodarbinātības pieaugums šajās valstīs 2022.-2035.gadā tiek lēsts 5,6% apmērā.",
+  "title": "Cik izplatīti ir ar narkotikām saistīti noziegumi ES?",
+  "subtitle": "2023. gadā aptuveni 1,18 miljoni ES pilsoņu bija iesaistīti nelegālās ar narkotikām saistītās darbībās, kurās tika izmantoti prekursori.",
   "textNoteDescription": "Piezīme",
-  "textNote": "sdchdc",
+  "textNote": "Kopējais policijas reģistrēto nelikumīgo nodarījumu skaits, kas saistīti ar kontrolējamām narkotikām vai prekursoriem. Ziņojumi par nodarījumiem pret valsts narkotiku tiesību aktiem (lietošana, glabāšana, tirdzniecība utt.) atspoguļo atšķirības tiesību aktos, bet arī dažādos veidus, kā tiesību akti tiek piemēroti un izpildīti, kā arī prioritātes un resursus, ko krimināltiesību iestādes piešķir konkrētām problēmām.",
   "textSourceDescription": "Avots",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Piekļūstiet datiem",
-  "extraInfo_DE": "Vācija paātrina atjaunojamās enerģijas ieviešanu, paredz 80% tīras enerģijas līdz 2030. gadam",
-  "extraInfo_FR": "Francijas parlaments valsts mēroga protestu laikā apstiprina nozīmīgo imigrācijas reformas likumprojektu",
-  "legend1": "Nav pieejami dati",
+  "extraInfo_AT": "Kopējais skaits: 35737",
+  "extraInfo_BE": "Kopējais skaits: 58915",
+  "extraInfo_BG": "Kopējais skaits: 5691",
+  "extraInfo_CY": "Kopējais skaits: 1094",
+  "extraInfo_CZ": "Kopējais skaits: 4328",
+  "extraInfo_DE": "Kopējais skaits: 346877",
+  "extraInfo_DK": "Kopējais skaits: 29934",
+  "extraInfo_EE": "Kopējais skaits: 3297",
+  "extraInfo_EL": "Kopējais skaits: 12713",
+  "extraInfo_ES": "Kopējais skaits: 21033",
+  "extraInfo_FI": "Kopējais skaits: 26784",
+  "extraInfo_FR": "Kopējais skaits: 346628",
+  "extraInfo_HR": "Kopējais skaits: 10356",
+  "extraInfo_HU": "Kopējais skaits: 6589",
+  "extraInfo_IE": "Kopējais skaits: 16699",
+  "extraInfo_IT": "Kopējais skaits: 30365",
+  "extraInfo_LT": "Kopējais skaits: 3811",
+  "extraInfo_LU": "Kopējais skaits: 3129",
+  "extraInfo_LV": "Kopējais skaits: 1350",
+  "extraInfo_MT": "Kopējais skaits: 200",
+  "extraInfo_NL": "Kopējais skaits: 13580",
+  "extraInfo_PL": "Kopējais skaits: 67346",
+  "extraInfo_PT": "Kopējais skaits: 7661",
+  "extraInfo_RO": "Kopējais skaits: 12775",
+  "extraInfo_SE": "Kopējais skaits: 115164",
+  "extraInfo_SI": "Kopējais skaits: 1294",
+  "extraInfo_SK": "Kopējais skaits: 1361",
+  "legend1": "Dati nav pieejami",
+  "customUnitLabel": "uz simts tūkstošiem iedzīvotāju",
   "tooltipExtraInfoLabel": "Noklikšķiniet šeit"
 }
