Update language file: lt

--- a/static/languages/lt.json
+++ b/static/languages/lt.json
@@ -1,13 +1,39 @@
 {
-  "title": "Kurios ES šalys siūlo geriausias įsidarbinimo perspektyvas?",
-  "subtitle": "Skaičiuojama, kad būsimas užimtumo augimas šiose šalyse 2022–2035 m. sieks 5,6 proc.",
+  "title": "Ar ES dažni su narkotikais susiję nusikaltimai?",
+  "subtitle": "2023 m. apie 1,18 mln. ES piliečių dalyvavo nelegalioje su narkotikais susijusioje veikloje, kurioje buvo naudojami prekursoriai.",
   "textNoteDescription": "Pastaba",
-  "textNote": "sdchdc",
+  "textNote": "Bendras policijos užregistruotų neteisėtų veikų, susijusių su kontroliuojamaisiais narkotikais ar jų pirmtakais, skaičius. Pranešimai apie nusikaltimus, pažeidžiančius nacionalinius narkotikus reglamentuojančius įstatymus (vartojimas, laikymas, prekyba ir kt.), atspindi teisės aktų skirtumus, bet taip pat skirtingus įstatymų vykdymo ir taikymo būdus, taip pat baudžiamosios teisenos institucijų prioritetus ir išteklius, skirtus konkrečioms problemoms spręsti.",
   "textSourceDescription": "Šaltinis",
-  "textSource": "sdcshdc",
-  "linkDataAccessDescription": "Pasiekite duomenis",
-  "extraInfo_DE": "Vokietija paspartina atsinaujinančios energijos diegimą ir siekia 80 % švarios energijos iki 2030 m.",
-  "extraInfo_FR": "Prancūzijos parlamentas, kilus protestams visoje šalyje, patvirtino pagrindinį imigracijos reformos įstatymo projektą",
+  "textSource": "Eurostatas (2023 m.)",
+  "linkDataAccessDescription": "Prieiga prie duomenų",
+  "extraInfo_AT": "Iš viso: 35737",
+  "extraInfo_BE": "Iš viso: 58915",
+  "extraInfo_BG": "Iš viso: 5691",
+  "extraInfo_CY": "Iš viso: 1094",
+  "extraInfo_CZ": "Iš viso: 4328",
+  "extraInfo_DE": "Bendras skaičius: 346877",
+  "extraInfo_DK": "Iš viso: 29934",
+  "extraInfo_EE": "Iš viso: 3297",
+  "extraInfo_EL": "Iš viso: 12713",
+  "extraInfo_ES": "Iš viso: 21033",
+  "extraInfo_FI": "Iš viso: 26784",
+  "extraInfo_FR": "Iš viso: 346628",
+  "extraInfo_HR": "Iš viso: 10356",
+  "extraInfo_HU": "Iš viso: 6589",
+  "extraInfo_IE": "Iš viso: 16699",
+  "extraInfo_IT": "Iš viso: 30365",
+  "extraInfo_LT": "Iš viso: 3811",
+  "extraInfo_LU": "Iš viso: 3129",
+  "extraInfo_LV": "Iš viso: 1350",
+  "extraInfo_MT": "Iš viso: 200",
+  "extraInfo_NL": "Iš viso: 13580",
+  "extraInfo_PL": "Iš viso: 67346",
+  "extraInfo_PT": "Iš viso: 7661",
+  "extraInfo_RO": "Iš viso: 12775",
+  "extraInfo_SE": "Iš viso: 115164",
+  "extraInfo_SI": "Iš viso: 1294",
+  "extraInfo_SK": "Iš viso: 1361",
   "legend1": "Nėra duomenų",
-  "tooltipExtraInfoLabel": "Spauskite čia"
+  "customUnitLabel": "šimtui tūkstančių gyventojų",
+  "tooltipExtraInfoLabel": "Spustelėkite čia"
 }
