Update language file: it

--- a/static/languages/it.json
+++ b/static/languages/it.json
@@ -1,13 +1,39 @@
 {
-  "title": "Quali paesi dell'UE offrono le migliori prospettive di occupazione?",
-  "subtitle": "Si stima che la crescita futura dell'occupazione in questi paesi nel periodo 2022-2035 sarà del 5,6%.",
+  "title": "Quanto sono diffusi i reati legati alla droga nell'UE?",
+  "subtitle": "Nel 2023, circa 1,18 milioni di cittadini dell'UE erano coinvolti in attività illecite legate alla droga che prevedevano l'uso di precursori.",
   "textNoteDescription": "Nota",
-  "textNote": "sdchdc",
+  "textNote": "Numero totale di reati registrati dalla polizia per atti illeciti che coinvolgono droghe o precursori controllati. Le segnalazioni di reati contro la legislazione nazionale in materia di droga (uso, possesso, traffico, ecc.) riflettono le differenze nella legislazione, ma anche le diverse modalità di applicazione e rispetto della legge, nonché le priorità e le risorse assegnate a problemi specifici dalle agenzie di giustizia penale.",
   "textSourceDescription": "Fonte",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Accedi ai dati",
-  "extraInfo_DE": "La Germania accelera il lancio delle energie rinnovabili, puntando all'80% di energia pulita entro il 2030",
-  "extraInfo_FR": "Il Parlamento francese approva un importante disegno di legge sulla riforma dell'immigrazione tra le proteste nazionali",
+  "extraInfo_AT": "Numero totale: 35737",
+  "extraInfo_BE": "Numero totale: 58915",
+  "extraInfo_BG": "Numero totale: 5691",
+  "extraInfo_CY": "Numero totale: 1094",
+  "extraInfo_CZ": "Numero totale: 4328",
+  "extraInfo_DE": "Numero totale: 346877",
+  "extraInfo_DK": "Numero totale: 29934",
+  "extraInfo_EE": "Numero totale: 3297",
+  "extraInfo_EL": "Numero totale: 12713",
+  "extraInfo_ES": "Numero totale: 21033",
+  "extraInfo_FI": "Numero totale: 26784",
+  "extraInfo_FR": "Numero totale: 346628",
+  "extraInfo_HR": "Numero totale: 10356",
+  "extraInfo_HU": "Numero totale: 6589",
+  "extraInfo_IE": "Numero totale: 16699",
+  "extraInfo_IT": "Numero totale: 30365",
+  "extraInfo_LT": "Numero totale: 3811",
+  "extraInfo_LU": "Numero totale: 3129",
+  "extraInfo_LV": "Numero totale: 1350",
+  "extraInfo_MT": "Numero totale: 200",
+  "extraInfo_NL": "Numero totale: 13580",
+  "extraInfo_PL": "Numero totale: 67346",
+  "extraInfo_PT": "Numero totale: 7661",
+  "extraInfo_RO": "Numero totale: 12775",
+  "extraInfo_SE": "Numero totale: 115164",
+  "extraInfo_SI": "Numero totale: 1294",
+  "extraInfo_SK": "Numero totale: 1361",
   "legend1": "Nessun dato disponibile",
+  "customUnitLabel": "ogni centomila abitanti",
   "tooltipExtraInfoLabel": "clicca qui"
 }
