Update language file: ro

--- a/static/languages/ro.json
+++ b/static/languages/ro.json
@@ -1,13 +1,39 @@
 {
-  "title": "Care țări UE oferă cele mai bune perspective de angajare?",
-  "subtitle": "Creșterea viitoare a ocupării forței de muncă în aceste țări în perioada 2022-2035 este estimată la 5,6%.",
+  "title": "Cât de frecvente sunt infracțiunile legate de droguri în UE?",
+  "subtitle": "În 2023, aproximativ 1,18 milioane de cetățeni ai UE au fost implicați în activități ilegale legate de droguri care implică precursori.",
   "textNoteDescription": "Nota",
-  "textNote": "sdchdc",
+  "textNote": "Numărul total de infracțiuni înregistrate de poliție pentru acte ilegale care implică droguri controlate sau precursori. Rapoartele privind infracțiunile împotriva legislației naționale privind drogurile (consum, deținere, trafic etc.) reflectă diferențele legislative, dar și diferitele moduri în care legea este aplicată și aplicată, precum și prioritățile și resursele alocate problemelor specifice de către agențiile de justiție penală.",
   "textSourceDescription": "Sursă",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Accesați datele",
-  "extraInfo_DE": "Germania accelerează lansarea energiei regenerabile, țintește 80% energie curată până în 2030",
-  "extraInfo_FR": "Parlamentul francez aprobă un proiect de lege major de reformă a imigrației pe fondul protestelor la nivel național",
-  "legend1": "Nu există date disponibile",
+  "extraInfo_AT": "Număr total: 35737",
+  "extraInfo_BE": "Număr total: 58915",
+  "extraInfo_BG": "Număr total: 5691",
+  "extraInfo_CY": "Număr total: 1094",
+  "extraInfo_CZ": "Număr total: 4328",
+  "extraInfo_DE": "Număr total: 346877",
+  "extraInfo_DK": "Număr total: 29934",
+  "extraInfo_EE": "Număr total: 3297",
+  "extraInfo_EL": "Număr total: 12713",
+  "extraInfo_ES": "Număr total: 21033",
+  "extraInfo_FI": "Număr total: 26784",
+  "extraInfo_FR": "Număr total: 346628",
+  "extraInfo_HR": "Număr total: 10356",
+  "extraInfo_HU": "Număr total: 6589",
+  "extraInfo_IE": "Număr total: 16699",
+  "extraInfo_IT": "Număr total: 30365",
+  "extraInfo_LT": "Număr total: 3811",
+  "extraInfo_LU": "Număr total: 3129",
+  "extraInfo_LV": "Număr total: 1350",
+  "extraInfo_MT": "Număr total: 200",
+  "extraInfo_NL": "Număr total: 13580",
+  "extraInfo_PL": "Număr total: 67346",
+  "extraInfo_PT": "Număr total: 7661",
+  "extraInfo_RO": "Număr total: 12775",
+  "extraInfo_SE": "Număr total: 115164",
+  "extraInfo_SI": "Număr total: 1294",
+  "extraInfo_SK": "Număr total: 1361",
+  "legend1": "Nu sunt disponibile date",
+  "customUnitLabel": "la o sută de mii de locuitori",
   "tooltipExtraInfoLabel": "Click aici"
 }
